# qgis-modernization-guide

./: GUIDE.md  README.md
template/: .gitignore  .pre-commit-config.yaml  pyproject.toml
template/.github/workflows/: tests.yml
template/src/my_plugin/: __init__.py  metadata.txt  plugin.py
template/tests/: test_plugin.py
